# msgym

./: .gitignore  .gitmodules  README.md  env_test.py  pyproject.toml
DynSyn-SAC/: README.md  pyproject.toml  requirements.txt
DynSyn-SAC/DynSyn/: DynSynLayer.py  SAC_DynSyn.py  __init__.py
DynSyn-SAC/SB3-Scripts/: callback.py  eval.py  schedule.py  train.py  utils.py
DynSyn-SAC/SB3-Scripts/wrapper/: __init__.py  muscle_norm_wrapper.py
DynSyn-SAC/configs/: locomotionFull.json  locomotionFull_100.json  locomotionLegs.json  manipulation.json
msgym/: __init__.py
msgym/envs/: __init__.py  imitation_trajectory.py  locomotionFull_v1.py  locomotionLegs_v1.py  manipulation_v1.py  utils.py
msgym/motion_data/: walking_gait.npz
