[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynsyn-sac"
version = "0.1.0"
description = "SAC-based training implementation of DynSyn"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

# Minimal runtime deps for the training/eval scripts and DynSyn agent.
dependencies = [
  "gymnasium>=1.0.1",
  "numpy>=1.24.4",
  "stable_baselines3[extra]>=2.3.2",
  "sb3_contrib>=2.3.0",
  "moviepy>=1.0.3",
  "tensorboard>=2.12.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["DynSyn*"]
